--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-        <li class="sidebar-nav-item"><a href="#about">Chuu'topia</a></li>
-        <li class="sidebar-nav-item"><a href="#services">Chuu's Places</a></li>
-        <li class="sidebar-nav-item"><a href="#portfolio">Support Us</a></li>
+        <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
+        <li class="sidebar-nav-item"><a href="#Chuu's Places">Chuu's Places</a></li>
+        <li class="sidebar-nav-item"><a href="#Support Us">Support Us</a></li>
     </ul>
 </nav>
 
@@ -69,7 +69,7 @@
 </section>
 
 <!-- Services -->
-<section class="content-section bg-primary text-white text-center" id="services">
+<section class="content-section bg-primary text-white text-center" id="Chuu's Places">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading">
             <h3 class="text-secondary mb-0">Find out more!</h3>
@@ -116,7 +116,7 @@
     </div>
 </section>
 <!-- Portfolio -->
-<section class="content-section" id="portfolio">
+<section class="content-section" id="Support Us">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0">Support Us</h3>
