--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <ul class="sidebar-nav">
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
-        <li class="sidebar-nav-item"><a href="#Chuu's Places">Chuu's Places</a></li>
-        <li class="sidebar-nav-item"><a href="#Support Us">Support Us</a></li>
+        <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
+        <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
     </ul>
 </nav>
 
