--- a/Chuutopia Website/index.html
+++ b/Chuutopia Website/index.html
@@ -28,9 +28,9 @@
     <ul class="sidebar-nav">
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#about">Chuu'topia</a></li>
-        <li class="sidebar-nav-item"><a href="#services">Chuu's Places</a></li>
-        <li class="sidebar-nav-item"><a href="#portfolio">Support Us</a></li>
-        <li class="sidebar-nav-item"><a href="#contact">Contact Us</a></li>
+        <li class="sidebar-nav-item"><a href="#services">Chuu's-Places</a></li>
+        <li class="sidebar-nav-item"><a href="#portfolio">Support-Us</a></li>
+        <li class="sidebar-nav-item"><a href="#contact">Contact-Us</a></li>
     </ul>
 </nav>
 
