--- a/Chuutopia Website/index.html
+++ b/Chuutopia Website/index.html
@@ -25,18 +25,16 @@
 <!-- Navigation-->
 <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 <nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-        <li class="sidebar-nav-item"><a href="#about">Chuu'topia</a></li>
-        <li class="sidebar-nav-item"><a href="#services">Chuu's-Places</a></li>
-        <li class="sidebar-nav-item"><a href="#portfolio">Support-Us</a></li>
-        <li class="sidebar-nav-item"><a href="#contact">Contact-Us</a></li>
+    <ul class="sidebar-nav">  
+        <li class="sidebar-nav-item"><a href="#Home">Chuu'topia</a></li>
+        <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
+        <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
     </ul>
 </nav>
 
 <!-- Header -->
 <!-- About -->
-<section class="content-section bg-light" id="about">
+<section class="content-section bg-light" id="Home">
     <div class="container px-4 px-lg-5 text-center">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
@@ -70,7 +68,7 @@
 </section>
 
 <!-- Services -->
-<section class="content-section bg-primary text-white text-center" id="services">
+<section class="content-section bg-primary text-white text-center" id="Chuu's-Places">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading">
             <h3 class="text-secondary mb-0">Find out more!</h3>
@@ -117,7 +115,7 @@
     </div>
 </section>
 <!-- Portfolio -->
-<section class="content-section" id="portfolio">
+<section class="content-section" id="Support-Us">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0">Support Us</h3>
