--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
-        <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
         <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
         <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
@@ -35,7 +34,7 @@
 
 <!-- Header -->
 <!-- About -->
-<section class="content-section bg-light" id="about">
+<section class="content-section bg-light" id="#Chuu'topia">
     <div class="container px-4 px-lg-5 text-center">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
@@ -68,7 +67,7 @@
 </section>
 
 <!-- Services -->
-<section class="content-section bg-primary text-white text-center" id="Chuu's Places">
+<section class="content-section bg-primary text-white text-center" id="Chuu's-Places">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading">
             <h3 class="text-secondary mb-0">Find out more!</h3>
@@ -115,7 +114,7 @@
     </div>
 </section>
 <!-- Portfolio -->
-<section class="content-section" id="Support Us">
+<section class="content-section" id="#Support-Us">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0">Support Us</h3>
