--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- Header -->
 <!-- About -->
-<section class="content-section bg-light" id="#Chuu'topia">
+<section class="content-section bg-light" id="Chuu'topia">
     <div class="container px-4 px-lg-5 text-center">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
@@ -114,7 +114,7 @@
     </div>
 </section>
 <!-- Portfolio -->
-<section class="content-section" id="#Support-Us">
+<section class="content-section" id="Support-Us">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0">Support Us</h3>
