--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
                 <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
-                 <img class="img-fluid" src="assets/img/birthdaybanner.png" alt="A cute birthday banner"/>
+                 <img class="img-fluid" src="assets/img/birthdaybanner.gif" alt="A cute birthday banner"/>
                 <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
                 <p class="lead mb-5">
                     Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
