--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
             <div class="col-lg-10">
                 <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
                  <img class="img-fluid" src="assets/img/birthdaybanner.gif" alt="A cute birthday banner"/>
-                <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
+                <h2>HAPPY BIRTHDAY CHUU!!!!</h2>
                 <p class="lead mb-5">
-                    Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
-                    giveaways, bots and events galore. Join us today!
+                    We hope you are having the best day and that you feel our love!!
                 </p>
                 <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
                 <footer class="footer text-center">
