--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                  </p>
                   <iframe 
                      src="https://docs.google.com/forms/d/e/1FAIpQLSfcXtZt2I2xZgfEhZniM6Rsj3yWWSvQZdLl6YNDu9MR0GoC6Q/viewform?embedded=true"
-                        width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe>
-                <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
+                        width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe> </p>
+               <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
                 <footer class="footer text-center">
                     <div class="container px-4 px-lg-5">
                         <ul class="list-inline mb-5">
