--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-lg-10">
                 <img class="img-fluid" src="assets/img/birthdaybanner.gif" alt="A cute birthday banner"/>
                 <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
-                  <h2>HAPPY BIRTHDAY CHUU!!!!</h2>
+                  <h2>HAPPY BIRTHDAY FROM EVERYONE AT CHUU'TOPIA!!!!</h2>
                 <p class="lead mb-5">
                     We hope you are having the best day and that you feel our love!!
                  </p>
