--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="lead mb-5">
                     We hope you are having the best day and that you feel our love!!
                  </p>
-                  <iframe 
+                 <p <iframe 
                      src="https://docs.google.com/forms/d/e/1FAIpQLSfcXtZt2I2xZgfEhZniM6Rsj3yWWSvQZdLl6YNDu9MR0GoC6Q/viewform?embedded=true"
                         width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe> </p>
                <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
