--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <p class="lead mb-5">
                     We hope you are having the best day and that you feel our love!!
                  </p>
-                 <p<iframe 
+                 <iframe 
                      src="https://docs.google.com/forms/d/e/1FAIpQLSfcXtZt2I2xZgfEhZniM6Rsj3yWWSvQZdLl6YNDu9MR0GoC6Q/viewform?embedded=true"
-                        width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+                        width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe>
                    <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
                 <p class="lead mb-5">
                     Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
