--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
                 <img class="img-fluid" src="assets/img/birthdaybanner.gif" alt="A cute birthday banner"/>
+                <h2>from everyone at</h2>
                 <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
-                  <h2>HAPPY BIRTHDAY FROM EVERYONE AT CHUU'TOPIA!!!!</h2>
-                <p class="lead mb-5">
-                    We hope you are having the best day and that you feel our love!!
-                 </p>
-                 <iframe 
+                  <h2>We hope you are having the best day and that you feel our love!!</h2>
+                   <iframe 
                      src="https://docs.google.com/forms/d/e/1FAIpQLSfcXtZt2I2xZgfEhZniM6Rsj3yWWSvQZdLl6YNDu9MR0GoC6Q/viewform?embedded=true"
                         width="600" height="720 frameborder=" 0" marginheight="0" marginwidth="0">Loading…</iframe>
                    <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
