--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="container px-4 px-lg-5 text-center">
         <h2 class="mb-4">The end, or just the beginning..?</h2>
         <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
-        <a class="btn btn-xl btn-dark" href="#page-top">Start again!</a>
+        <a class="btn btn-xl btn-dark" href="Chuu'topia">Start again!</a>
     </div>
     <!-- Footer -->
     <footer class="footer text-center">
