--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="css/styles.css" rel="stylesheet"/>
 </head>
 
-<body id="Chuu'topia">
+<body id="#Chuu'topia">
 <!-- Navigation-->
 <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 <nav id="sidebar-wrapper">
@@ -185,7 +185,7 @@
     <div class="container px-4 px-lg-5 text-center">
         <h2 class="mb-4">The end, or just the beginning..?</h2>
         <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
-        <a class="btn btn-xl btn-dark" href="Chuu'topia">Start again!</a>
+        <a class="btn btn-xl btn-dark" href="#Chuu'topia">Start again!</a>
     </div>
     <!-- Footer -->
     <footer class="footer text-center">
@@ -207,7 +207,7 @@
 </section>
 
 <!-- Scroll to Top Button -->
-<a class="scroll-to-top rounded" href="Chuu'topia"><i class="fas fa-angle-up"></i></a>
+<a class="scroll-to-top rounded" href="#Chuu'topia"><i class="fas fa-angle-up"></i></a>
 <!-- Bootstrap core JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS -->
