--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
     <div class="container px-4 px-lg-5 text-center">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
-              <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
+              <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="..."/>
+                <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
                 <p class="lead mb-5">
                     Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
-                    giveaways, bots and events galore. Join us today!!!
-                 </p>
+                    giveaways, bots and events galore. Join us today!
+                </p>
                <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
                 <footer class="footer text-center">
                     <div class="container px-4 px-lg-5">
