--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     giveaways, bots and events galore. Join us today!
                 </p>
                <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
+                <iframe src="https://discord.com/widget?id=801936179670417430&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                 <footer class="footer text-center">
                     <div class="container px-4 px-lg-5">
                         <ul class="list-inline mb-5">
