--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <!-- Call to Action -->
 <section class="content-section bg-primary text-white">
     <div class="container px-4 px-lg-5 text-center">
-        <h2 class="mb-4">The end, or just the beginning..?</h2>
+        <h2 class="mb-4">Loved what you have seen, then dont delay and join here!</h2>
         <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
         <a class="btn btn-xl btn-dark" href="#Chuu'topia">Start again!</a>
     </div>
