--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Chuu'topia, the chuu'iest Discord server!!!</title>
+    <title>Chuu'topia, the chuu'iest Discord server!!!
+        <p><img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/</p></title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Font Awesome icons (free version) -->
@@ -38,7 +39,7 @@
     <div class="container px-4 px-lg-5 text-center">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-10">
-              <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="..."/>
+              <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
                 <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
                 <p class="lead mb-5">
                     Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
