--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Chuu'topia, the chuu'iest Discord server!!!
-        <p><img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/></p></title>
+    <title>Chuu'topia, the chuu'iest Discord server!!!</title>
+        <p><img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/></p>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Font Awesome icons (free version) -->
