--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Chuu'topia, the chuu'iest Discord server!!!</title>
-        <p><img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/></p>
+        <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo"/>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Font Awesome icons (free version) -->
