--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </a>
             </div>
             <div class="col-lg-6">
-                <a class="portfolio-item" href="https://forms.gle/CPb8WgX1DwSgdtZz8">
+                <a class="portfolio-item" href="botindex.html">
                     <div class="caption">
                         <div class="caption-content">
                             <div class="h2">COMING SOON!!!</div>
