--- a/botindex.html
+++ b/botindex.html
@@ -49,13 +49,13 @@
 <body class="bg-dark">
     <div class="container container-1">
         <div class="row">
-            <img class="fit-picture" src="asset/chuutopiabotbanner.png" alt="Chuu'topia Logo" style="width:100%">
+            <img class="fit-picture" src="assets/chuutopiabotbanner.png" alt="Chuu'topia Logo" style="width:100%">
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                        <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
+                        <img class="card-img-top" src="assets/image1.png" alt="Bot Invite" style="width:100%">
                         <h4 class="card-title big-text">Invite Bot</h4>
                         <p class="card-text">Invite the greatest Chuu pic bot to your server, increase its Chuu'iness by
                             1000%!</p>
@@ -68,7 +68,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                        <img class="card-img-top" src="asset/image2.png" alt="Support Server" style="width:100%">
+                        <img class="card-img-top" src="assets/image2.png" alt="Support Server" style="width:100%">
                         <h4 class="card-title big-text">Support Server</h4>
                         <p class="card-text">Join here for help setting up the bot request features and to
                             report bugs..
