--- a/botindex.html
+++ b/botindex.html
@@ -11,7 +11,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link rel="stylesheet" href="css/styles.css" media="screen">
 
     <!-- Favicons -->
     <!-- Change the favicon.png file to the image you wish to use as the favicon -->
