--- a/botindex.html
+++ b/botindex.html
@@ -39,10 +39,10 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="Chuu'topia's Chuupic Bot!" />
-    <meta property="og:url" content="https://autocode.com/" />
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://chuutopia.com" />
+    <meta property="og:image" content="asset/chuutopiabotbanner.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Basic and simple bot website for your autocode creations!" />
+    <meta property="og:description" content="Want Chuu pics in your server? Add @chuu'topia today!" />
 
 </head>
 
