--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 <a class="portfolio-item" href="botindex.html">
                     <div class="caption">
                         <div class="caption-content">
-                            <div class="h2">COMING SOON!!!</div>
+                            <div class="h2">NOW LAUNCHED!!</div>
                             <p class="mb-0">
                                 From <code>%chuugif</code> to <code>%chuupic</code> and every <code>%ar</code>
-                                in between, register your interest today!
+                                in between, invite Chuu'topia bot today!!
                             </p>
                         </div>
                     </div>
