--- a/botindex.html
+++ b/botindex.html
@@ -11,7 +11,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link rel="stylesheet" href="style.css" media="screen">
 
     <!-- Favicons -->
     <!-- Change the favicon.png file to the image you wish to use as the favicon -->
@@ -39,23 +39,23 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="Chuu'topia's Chuupic Bot!" />
-    <meta property="og:url" content="https://chuutopia.com" />
-    <meta property="og:image" content="asset/chuutopiabotbanner.png" />
+    <meta property="og:url" content="https://autocode.com/" />
+    <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Want Chuu pics in your server? Add @chuu'topia today!" />
+    <meta property="og:description" content="Basic and simple bot website for your autocode creations!" />
 
 </head>
 
 <body class="bg-dark">
     <div class="container container-1">
         <div class="row">
-            <img class="fit-picture" src="assets/chuutopiabotbanner.png" alt="Chuu'topia Logo" style="width:100%">
+            <img class="fit-picture" src="asset/chuutopiabotbanner.png" alt="Chuu'topia Logo" style="width:100%">
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                        <img class="card-img-top" src="assets/image1.png" alt="Bot Invite" style="width:100%">
+                        <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
                         <h4 class="card-title big-text">Invite Bot</h4>
                         <p class="card-text">Invite the greatest Chuu pic bot to your server, increase its Chuu'iness by
                             1000%!</p>
@@ -68,7 +68,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                        <img class="card-img-top" src="assets/image2.png" alt="Support Server" style="width:100%">
+                        <img class="card-img-top" src="asset/image2.png" alt="Support Server" style="width:100%">
                         <h4 class="card-title big-text">Support Server</h4>
                         <p class="card-text">Join here for help setting up the bot request features and to
                             report bugs..
