--- a/bot/index.html
+++ b/bot/index.html
@@ -39,10 +39,10 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="Chuu'topia's Chuupic Bot!" />
-    <meta property="og:url" content="https://autocode.com/" />
+    <meta property="og:url" content="https://chuutopia.com/" />
     <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Basic and simple bot website for your autocode creations!" />
+    <meta property="og:description" content="Get Chuu pics in your server!" />
 
 </head>
 
@@ -73,7 +73,7 @@
                         <p class="card-text">Join here for help setting up the bot request features and to
                             report bugs..
                         </p>
-                        <a href="https://discord.gg/NzZ97QgSvX" class="btn btn-discord btn-block stretched-link">Join
+                        <a href="https://discord.gg/NzZ97QgSvX" target="_blank" class="btn btn-discord btn-block stretched-link">Join
                             our Support Server!</a>
                     </div>
                 </div>
