--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </a>
             </div>
             <div class="col-lg-6">
-                <a class="portfolio-item" href="botindex.html">
+                <a class="portfolio-item" href="botindex.html" target="_blank">
                     <div class="caption">
                         <div class="caption-content">
                             <div class="h2">NOW LAUNCHED!!</div>
@@ -167,7 +167,7 @@
                             </p>
                         </div>
                     </div>
-                    <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..."/>
+                    <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="Chuutopia Bot Logo"/>
                 </a>
             </div>
         </div>
