--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </a>
             </div>
             <div class="col-lg-6">
-                <a class="portfolio-item" href="bot/index.html" target="_blank">
+                <a class="portfolio-item" href="bot" target="_blank">
                     <div class="caption">
                         <div class="caption-content">
                             <div class="h2">NOW LAUNCHED!!</div>
