--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
         <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
         <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
+        <li class="sidebar-nav-item"><a href="https://chuutopia.com/bot" target="_blank">Support-Us</a></li>
     </ul>
 </nav>
 
