--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
         <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
         <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
-        <li class="sidebar-nav-item"><a href="https://chuutopia.com/bot" target="_blank">Support-Us</a></li>
+        <li class="sidebar-nav-item"><a href="https://chuutopia.com/bot" target="_blank">Chuu'topia Bot</a></li>
     </ul>
 </nav>
 
@@ -57,6 +57,8 @@
                             <li class="list-inline-item">
                                 <a class="social-link rounded-circle text-white" href="https://www.instagram.com/chuutopian">
                                     <i class="icon-social-instagram"></i>
+                                    <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="Chuu'topia Bot Logo"/>
+                                    <h2>Chuu'topia Bot is now live!!</h2>
                                 </a>
                             </li>
                         </ul>
