--- a/bot/index.html
+++ b/bot/index.html
@@ -60,7 +60,7 @@
                         <p class="card-text">Invite the greatest Chuu pic bot to your server, increase its Chuu'iness by
                             1000%!</p>
                         <!-- This link invites Spectre, Change the client id to your bot's id -->
-                        <a href="https://discord.com/oauth2/authorize?client_id=891665780050100235&permissions=8&scope=bot%20applications.commands"
+                        <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
                             class="btn btn-discord btn-block stretched-link">Invite Chuu'topia Bot</a>
                     </div>
                 </div>
