--- a/bot/index.html
+++ b/bot/index.html
@@ -56,7 +56,7 @@
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
                         <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
-                        <h4 class="card-title big-text">Invite Bot</h4>
+                        <h4 class="card-title big-text">Invite @chuu'topia</h4>
                         <p class="card-text">Invite the greatest Chuu pic bot to your server, increase its Chuu'iness by
                             1000%!</p>
                         <!-- This link invites Spectre, Change the client id to your bot's id -->
