--- a/bot/index.html
+++ b/bot/index.html
@@ -61,7 +61,7 @@
                             1000%!</p>
                         <!-- This link invites Spectre, Change the client id to your bot's id -->
                         <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
-                            class="btn btn-discord btn-block stretched-link">Invite Chuu'topia Bot</a>
+                            class="btn btn-discord btn-block stretched-link">Invite Chuu'topia Bot!</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
                         <img class="card-img-top" src="asset/image2.png" alt="Support Server" style="width:100%">
-                        <h4 class="card-title big-text">Support Server</h4>
+                        <h4 class="card-title big-text">Support Server!</h4>
                         <p class="card-text">Join here for help setting up the bot request features and to
                             report bugs..
                         </p>
