Updated bot command list
Added %loonameme & %loonapic

--- a/bot/index.html
+++ b/bot/index.html
@@ -73,7 +73,8 @@
                         <p class="card-text">Join here for help setting up the bot request features and to
                             report bugs..
                         </p>
-                        <a href="https://discord.gg/NzZ97QgSvX" target="_blank" class="btn btn-discord btn-block stretched-link">Join
+                        <a href="https://discord.gg/NzZ97QgSvX" target="_blank"
+                            class="btn btn-discord btn-block stretched-link">Join
                             our Support Server!</a>
                     </div>
                 </div>
@@ -111,6 +112,35 @@
                                     <h4 class="card-title big-text">%chuugif</h4>
                                     <!-- Command Description -->
                                     <p class="card-text">Just like %chuupic, except she moves!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="card bg-grey" style="width:100%">
+                                <div class="card-body">
+                                    <!-- Command -->
+                                    <h4 class="card-title big-text">%loonapic</h4>
+                                    <!-- Command Description -->
+                                    <p class="card-text">For all you OT12's out there, a random pic of any Loona
+                                        member!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="card bg-grey" style="width:100%">
+                                <div class="card-body">
+                                    <!-- Command -->
+                                    <h4 class="card-title big-text">%loonameme</h4>
+                                    <!-- Command Description -->
+                                    <p class="card-text">Who doesn't love a loona meme?</a>
                                 </div>
                             </div>
                         </div>
