--- a/bot/index.html
+++ b/bot/index.html
@@ -57,7 +57,8 @@
                     <div class="card-body">
                         <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
                         <h4 class="card-title big-text">Invite @chuu'topia</h4>
-                        <p class="card-text">Invite the greatest Chuu pic bot to your server, increase its Chuu'iness by
+                        <p class="card-text">Invite the greatest Chuu pic bot to your server and increase its Chuu'iness
+                            by
                             1000%!</p>
                         <!-- This link invites Spectre, Change the client id to your bot's id -->
                         <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
