--- a/bot/index.html
+++ b/bot/index.html
@@ -178,12 +178,16 @@
                 </li>
             </ul>
         </div>
-        <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
-            <div class="container">
-                <!-- Bot/Brand Name -->
-                <a class="navbar-brand" href="https://chuutopia.com"><b>&#169; 2022 | Chuu'topia</b></a>
+        <div class="card bg-grey" style="width:100%">
+            <div class="card-body">
+                <a href="https://chuutopia.com/bot/data" class="btn btn-discord btn-block stretched-link">Our Data
+                    Protection Policy!</a>
             </div>
-        </nav>
+            <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
+                <div class="container">
+                    <a class="navbar-brand" href="https://chuutopia.com"><b>&#169; 2022 | Chuu'topia</b></a>
+                </div>
+            </nav>
 
 </body>
 
