--- a/bot/data/index.html
+++ b/bot/data/index.html
@@ -58,7 +58,7 @@
                         <h4 class="card-title big-text">Data protection Policy</h4>
                         <h5 class="card-title small-text"><i>Coming Soon!</i></h5>
                         <p class="card-text">If you have any questions about your data in the meantime, please see us in
-                            opur support server!</p>
+                            our support server!</p>
                     </div>
                 </div>
             </div>
